# exif-swap

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
exif_swap/: __main__.py  main.py
